# festival-meteo

./: .gitignore  README.md  pyproject.toml
src/: aggregation.py  extract_meteo_API.py  get_coord_API.py  main.py  sibil_manipulation.py  test_meteo_api.py
